- Fix MDEV-10111 Reconize unsigned integers when creating tables via srcdef   modified:   storage/connect/ha_connect.cc   modified:   storage/connect/myconn.cpp

- Fix MDEV-10136 crash on SELECT jsonget_string(NULL, 'a')
  modified:   storage/connect/jsonudf.cpp

- Assert longjmp initialized when suballocating
  modified:   storage/connect/plugutil.c

- Avoid crash in MakeRecord when table->vcol_set isnull (trace > 1)
  modified:   storage/connect/ha_connect.cc