storage/connect/jsonudf.cpp
@@ -1433,7 +1433,7 @@ static my_bool CheckMemory(PGLOBAL g, UDF_INIT *initid, UDF_ARGS *args, uint n,
 				char *p = args->args[0];
 
 				// Is this a file name?
-				if (!strchr("[{ \t\r\n", *p) && (len = GetFileLength(p)))
+				if (p && !strchr("[{ \t\r\n", *p) && (len = GetFileLength(p)))
 					ml += len * (M + 1);
 				else
 					ml += args->lengths[0] * M;
